# python-morgul

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE.txt  README.md  dump_files.py  pyproject.toml  scan.c  scan.py  test.py  view.py  watch_example.json  watching.py
morgul/: bad_pixel_finder.py  config.py  morannon.ini  morannon.py  morgul.c  morgul.ini  morgul.py  morgul_correct.py  morgul_gainmap.py  morgul_mask.py  morgul_merge.py  morgul_nxmx.py  morgul_pedestal.py  morgul_prepare.py  morgul_setup.py  test_pattern.c  util.py  view.py
morgul/watcher/: morgul_watch.py  watch_images.py  watcher.py
watcher/: watch_images.py
writer/: CMakeLists.txt  Makefile  writer.c
