[tool.poetry]
name = "morgul"
version = "0.1.0"
description = ""
authors = [
    "Nicholas Devenish <ndevenish@gmail.com>",
    "Graeme Winter <graeme.winter@gmail.com>",
]
readme = "README.md"
license = "BSD-3-Clause"
packages = [
    {include = "morgul"},
]
include = ["morgul/morgul.ini"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
h5py = "^3.8.0"
tqdm = "^4.65.0"
hdf5plugin = "^4.1.2"
typer = "^0.9.0"
python-dateutil = "^2.8.2"
pint = "^0.22"
pydantic = "^1.10.9"
napari = [
    {version = "^0.4.18rc2", python = "^3.11", optional = true},
    {version = "<0.4.18a0", python = "<3.11", optional = true},
]

[tool.poetry.scripts]
morgul = "morgul.morgul:main"

[tool.poetry.extras]
all = ["napari"]
view = ["napari"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# E712: Replaces (x == False) with (x is False). Deadly for numpy arrays.
ignore = ["E501", "E741", "E712"]
line-length = 88
select = ["C9", "E", "F", "W", "I"]
unfixable = ["F841"]

