[tool.poetry]
name = "morgul"
version = "0.1.0"
description = ""
authors = [
    "Nicholas Devenish <ndevenish@gmail.com>",
    "Graeme Winter <graeme.winter@gmail.com>",
]
readme = "README.md"
license = "BSD-3-Clause"
packages = [{ include = "morgul" }]
include = ["morgul/morgul.ini"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
h5py = "^3.11.0"
tqdm = "^4.66.5"
hdf5plugin = "^5.0.0"
typer = "^0.12.5"
python-dateutil = "^2.9.0.post0"

[tool.poetry.scripts]
morgul = "morgul.morgul:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# E712: Replaces (x == False) with (x is False). Deadly for numpy arrays.
ignore = ["E501", "E741", "E712"]
select = ["E", "F", "W", "I"]
unfixable = ["F841"]
